--- a/src/componentes/amazon/product.css
+++ b/src/componentes/amazon/product.css
@@ -124,3 +124,14 @@
      100% {transform: scale(1.3);
    }
   }
+
+  .showCreate{
+    position: fixed;
+    left: 10px;
+    bottom: 10px;
+  }
+  .showCreateUrl{
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+  }
